--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,15 +1,21 @@
 body{
     text-align: center;
-    background-image: linear-gradient(gray, white);
+    background: rgb(250,0,0);
+    background: linear-gradient(160deg, rgba(250,0,0,1) 0%, rgba(250,0,100,1) 25%, rgba(150,0,250,1) 75%, rgba(0,0,250,1) 100%);
     background-repeat: no-repeat;
     background-size: cover;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
+main{
+    background-color: white;
+    margin: 50px;
+    border-radius: 25px;
+}
 
 h1{
-    margin-top: 50px;
-    margin-bottom: 50px;
-    color: white;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    color: black;
 }
 .contenedor{
     display: grid;
@@ -17,10 +23,19 @@ h1{
     justify-items: center;
 }
 .cards{
-    background-color: rgb(58, 103, 185);
+    background-color: rgb(250, 50, 150);
     border-radius: 25px;
     box-shadow: 10px 10px 10px black;
     margin-bottom: 100px;
+    padding-bottom: 10px;
     width: 16rem;
     color: white;
-} 
+}
+
+.comprar{
+    color: white;
+    background-color: blue;
+    text-decoration: none;
+    padding: 5px;
+    border-radius: 25px;
+}
