--- a/CSS/style.css
+++ b/CSS/style.css
@@ -23,7 +23,7 @@ h1{
     justify-items: center;
 }
 .cards{
-    background-color: rgb(250, 50, 150);
+    background-color: rgb(250, 50, 100);
     border-radius: 25px;
     box-shadow: 10px 10px 10px black;
     margin-bottom: 100px;
@@ -31,11 +31,67 @@ h1{
     width: 16rem;
     color: white;
 }
-
-.comprar{
-    color: white;
-    background-color: blue;
-    text-decoration: none;
-    padding: 5px;
-    border-radius: 25px;
+form{
+    display: flex;
+    justify-content: center;
 }
+.form1{
+margin-left: 10px;
+}
+
+
+
+/* Boton de comprar */
+button {
+    text-decoration: none;
+    position: absolute;
+    border: none;
+    font-size: 14px;
+    font-family: inherit;
+    color: #fff;
+    width: 9em;
+    height: 3em;
+    line-height: 2em;
+    text-align: center;
+    background: linear-gradient(90deg,#03a9f4,#f441a5,#ffeb3b,#03a9f4);
+    background-size: 300%;
+    border-radius: 30px;
+    z-index: 1;
+   }
+   
+   button:hover {
+    animation: ani 8s linear infinite;
+    border: none;
+   }
+   
+   @keyframes ani {
+    0% {
+     background-position: 0%;
+    }
+   
+    100% {
+     background-position: 400%;
+    }
+   }
+   
+   button:before {
+    content: '';
+    position: absolute;
+    top: -5px;
+    left: -5px;
+    right: -5px;
+    bottom: -5px;
+    z-index: -1;
+    background: linear-gradient(90deg,#03a9f4,#f441a5,#ffeb3b,#03a9f4);
+    background-size: 400%;
+    border-radius: 35px;
+    transition: 1s;
+   }
+   
+   button:hover::before {
+    filter: blur(20px);
+   }
+   
+   button:active {
+    background: linear-gradient(32deg,#03a9f4,#f441a5,#ffeb3b,#03a9f4);
+   }
