--- a/CSS/style.css
+++ b/CSS/style.css
@@ -127,6 +127,7 @@ margin-left: 10px;
     background-color: white;
     margin: 50px;
     border-radius: 25px;
+    transition: all 0.7s;
 }
 
 .darkmode{
