--- a/CSS/style.css
+++ b/CSS/style.css
@@ -17,16 +17,11 @@ body{
 }
 h1{
     letter-spacing: 10px;
-    text-shadow: rgb(0,150,255) 5px 5px 5px;
     font-family: 'Poppins', sans-serif;
     margin-bottom: 50px;
     padding-top: 50px;
     color: black;
     font-size: 75px;
-}
-h6{
-    color: red;
-    font-size: 20px;
 }
 form{
     display: flex;
@@ -36,3 +31,71 @@ form{
 .form1{
 margin-left: 10px;
 }
+.card{
+    margin: 20px;
+    border: 10px solid #03a9f4;
+    border-radius: 25px;
+}
+.carrito{
+    border: 10px solid #03a9f4;
+    border-radius: 25px;
+}
+
+
+
+
+
+/* Boton de comprar */
+.boton {
+    text-decoration: none;
+    position: absolute;
+    border: none;
+    font-size: 14px;
+    font-family: inherit;
+    color: #fff;
+    width: 9em;
+    height: 3em;
+    line-height: 2em;
+    text-align: center;
+    background: linear-gradient(90deg,#03a9f4,#f441a5,#ffeb3b,#03a9f4);
+    background-size: 300%;
+    border-radius: 30px;
+    z-index: 1;
+   }
+   
+   .boton:hover {
+    animation: ani 8s linear infinite;
+    border: none;
+   }
+   
+   @keyframes ani {
+    0% {
+     background-position: 0%;
+    }
+   
+    100% {
+     background-position: 400%;
+    }
+   }
+   
+   .boton:before {
+    content: '';
+    position: absolute;
+    top: -5px;
+    left: -5px;
+    right: -5px;
+    bottom: -5px;
+    z-index: -1;
+    background: linear-gradient(90deg,#03a9f4,#f441a5,#ffeb3b,#03a9f4);
+    background-size: 400%;
+    border-radius: 35px;
+    transition: 1s;
+   }
+   
+   .boton:hover::before {
+    filter: blur(20px);
+   }
+   
+   .boton:active {
+    background: linear-gradient(32deg,#03a9f4,#f441a5,#ffeb3b,#03a9f4);
+   }
