--- a/CSS/style.css
+++ b/CSS/style.css
@@ -37,7 +37,7 @@ margin-left: 10px;
     border-radius: 25px;
 }
 .carrito{
-    border: 10px solid #03a9f4;
+    border: 10px solid rgb(240, 71, 71);
     border-radius: 25px;
 }
 
@@ -85,7 +85,8 @@ margin-left: 10px;
     right: -5px;
     bottom: -5px;
     z-index: -1;
-    background: linear-gradient(90deg,#03a9f4,#f441a5,#ffeb3b,#03a9f4);
+    background: rgb(0,150,255);
+    background: linear-gradient(120deg, rgba(0,225,255,1) 0%, rgba(155,0,255,1) 50%, rgba(255,0,0,1) 100%);
     background-size: 400%;
     border-radius: 35px;
     transition: 1s;
