--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,24 +4,22 @@ body{
     background: rgb(0,150,255);
     background: linear-gradient(120deg, rgba(0,225,255,1) 0%, rgba(155,0,255,1) 50%, rgba(255,0,0,1) 100%);
 }
+header{
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
 .contenido{
     background-color: white;
     border-radius: 25px;
     padding-bottom: 50px;
     margin: 0px
 }
-.bob{
-    background-color: blueviolet;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-}
 h1{
     letter-spacing: 10px;
-    font-family: 'Poppins', sans-serif;
-    margin-bottom: 50px;
-    padding-top: 50px;
+    font-family: inherit;
     color: black;
     font-size: 75px;
+    padding-bottom: 25px;
 }
 form{
     display: flex;
@@ -42,60 +40,103 @@ margin-left: 10px;
 }
 
 
-
-
-/* Boton de comprar */
-.boton {
+/* Boton de enlaces*/
+button {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+    outline: none;
+    border: 0;
+    vertical-align: middle;
     text-decoration: none;
-    position: absolute;
-    border: none;
-    font-size: 14px;
+    background: transparent;
+    padding: 0;
+    font-size: inherit;
     font-family: inherit;
-    color: #fff;
-    width: 9em;
-    height: 3em;
-    line-height: 2em;
-    text-align: center;
-    background: linear-gradient(90deg,#03a9f4,#f441a5,#ffeb3b,#03a9f4);
-    background-size: 300%;
-    border-radius: 30px;
-    z-index: 1;
    }
    
-   .boton:hover {
-    animation: ani 8s linear infinite;
-    border: none;
+   button.learn-more {
+    width: 12rem;
+    height: auto;
    }
    
-   @keyframes ani {
-    0% {
-     background-position: 0%;
-    }
-   
-    100% {
-     background-position: 400%;
-    }
+   button.learn-more .circle {
+    transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+    position: relative;
+    display: block;
+    margin: 0;
+    width: 3rem;
+    height: 3rem;
+    background: #282936;
+    border-radius: 1.625rem;
    }
    
-   .boton:before {
-    content: '';
+   button.learn-more .circle .icon {
+    transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
     position: absolute;
-    top: -5px;
-    left: -5px;
-    right: -5px;
-    bottom: -5px;
-    z-index: -1;
-    background: rgb(0,150,255);
-    background: linear-gradient(120deg, rgba(0,225,255,1) 0%, rgba(155,0,255,1) 50%, rgba(255,0,0,1) 100%);
-    background-size: 400%;
-    border-radius: 35px;
-    transition: 1s;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    background: #fff;
    }
    
-   .boton:hover::before {
-    filter: blur(20px);
+   button.learn-more .circle .icon.arrow {
+    transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+    left: 0.625rem;
+    width: 1.125rem;
+    height: 0.125rem;
+    background: none;
    }
    
-   .boton:active {
-    background: linear-gradient(32deg,#03a9f4,#f441a5,#ffeb3b,#03a9f4);
+   button.learn-more .circle .icon.arrow::before {
+    position: absolute;
+    content: "";
+    top: -0.29rem;
+    right: 0.0625rem;
+    width: 0.625rem;
+    height: 0.625rem;
+    border-top: 0.125rem solid #fff;
+    border-right: 0.125rem solid #fff;
+    transform: rotate(45deg);
    }
+   
+   button.learn-more .button-text {
+    transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    padding: 0.75rem 0;
+    margin: 0 0 0 1.85rem;
+    color: #282936;
+    font-weight: 700;
+    line-height: 1.6;
+    text-align: center;
+    text-decoration: none;
+    text-transform: uppercase;
+   }
+   
+   button:hover .circle {
+    width: 100%;
+   }
+   
+   button:hover .circle .icon.arrow {
+    background: #fff;
+    transform: translate(1rem, 0);
+   }
+   
+   button:hover .button-text {
+    color: #fff;
+   }
+
+
+
+/*Mapa*/
+#map {
+	height: 500px;
+	width: 70%;
+    margin-left: 230px;
+    border-radius: 25px;
+    border: 10px solid red;
+}
