--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,7 +2,7 @@ body{
     text-align: center;
     margin: 50px;
     background: rgb(0,150,255);
-    background: linear-gradient(90deg, rgba(0,150,255,1) 0%, rgba(155,0,255,1) 50%, rgba(255,0,0,1) 100%);
+    background: linear-gradient(90deg, rgba(0,150,255,1) 0%, rgba(255,0,0,1) 100%);
 }
 header{
     padding-top: 50px;
@@ -38,6 +38,11 @@ margin-left: 10px;
     border: 10px solid rgb(240, 71, 71);
     border-radius: 25px;
 }
+.contenedor{
+    margin-top: 25px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
 
 
 /* Boton de enlaces*/
@@ -67,7 +72,8 @@ button {
     margin: 0;
     width: 3rem;
     height: 3rem;
-    background: #282936;
+    background: rgb(0,150,255);
+    background: linear-gradient(90deg, rgba(0,150,255,1) 0%, rgba(255,0,0,1) 100%);
     border-radius: 1.625rem;
    }
    
@@ -109,7 +115,7 @@ button {
     bottom: 0;
     padding: 0.75rem 0;
     margin: 0 0 0 1.85rem;
-    color: #282936;
+    color: black;
     font-weight: 700;
     line-height: 1.6;
     text-align: center;
@@ -136,7 +142,7 @@ button {
 #map {
 	height: 500px;
 	width: 70%;
-    margin-left: 230px;
+    margin-left: 200px;
     border-radius: 25px;
-    border: 10px solid red;
+    border: 10px solid black;
 }
